# 3SemesterprojektLaptop

./: CMakeLists.txt  decoder.cpp  decoder.h  definitioner.h  main.cpp  processor.cpp  processor.h  sampler.cpp  sampler.h  toolbox.cpp  toolbox.h
